# cmake-protobuf-example

./: AddressBook.proto  CMakeLists.txt  Makefile  README.md
